src/snapshots/clippings__test__parse_single_article_clip.snap
---
source: src/main.rs
expression: res
---
Ok(
    (
        "",
        Clipping {
            title: "crofflr 2015-08-07",
            author: Some(
                "crofflr.com",
            ),
            content: ArticleClip(
                ClippingArticleClip {
                    location: Location {
                        from: 228,
                        to: None,
                        kind: Location,
                    },
                    text: "\r\nYada yada ya",
                },
            ),
        },
    ),
)
