src/snapshots/clippings__test__parse_single_bookmark.snap
---
source: src/main.rs
expression: res
---
Ok(
    (
        "",
        Clipping {
            title: "Sapiens: A Brief History of Humankind",
            author: Some(
                "Harari, Yuval Noah",
            ),
            content: Bookmark(
                ClippingBookmark {
                    location: Location {
                        from: 3883,
                        to: None,
                        kind: Location,
                    },
                },
            ),
        },
    ),
)
