src/snapshots/clippings__test__parse_single_clipping.snap
---
source: src/main.rs
expression: res
---
Ok(
    (
        "",
        Clipping {
            title: "Flow",
            author: Some(
                "Mihaly Csikszentmihalyi",
            ),
            location: Location {
                from: 1213,
                to: Some(
                    1214,
                ),
            },
            text: "The reason it is possible to achieve such complete involvement in a flow experience is that goals are usually clear, and feedback immediate.",
        },
    ),
)
