src/snapshots/clippings__test__parse_single_note.snap
---
source: src/main.rs
expression: res
---
Ok(
    (
        "",
        Clipping {
            title: "Flow",
            author: Some(
                "Mihaly Csikszentmihalyi",
            ),
            content: Note(
                ClippingNote {
                    location: Location {
                        from: 1213,
                        to: None,
                        kind: Location,
                    },
                    note: "\r\nYada yada ya.",
                },
            ),
        },
    ),
)
