src/snapshots/clippings__test__single_clipping.snap
---
source: src/main.rs
expression: res
---
Ok(
    (
        "",
        Clipping {
            title: "Flow",
            author: "Mihaly Csikszentmihalyi",
            location: Location {
                from: 1213,
                to: 1214,
            },
            text: "\nThe reason it is possible to achieve such complete involvement in a flow experience is that goals are usually clear, and feedback immediate.",
        },
    ),
)
